<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnadirTarjetaActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="168dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:background="#DF3386"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="-15dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_marginVertical="3dp"
                android:src="@drawable/logo" />
        </LinearLayout>
        <Button
            android:id="@+id/logBtnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logBtnRegresar"
            android:onClick="irNuevaTarjeta"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/logTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:background="#F1B8D8"
                android:hint="@string/logTxtNombre"
                android:inputType="text"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/logTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="#F1B8D8"
                android:hint="@string/logTxtCorreo"
                android:inputType="text"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/logFechaTajetaDeCaducidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="#F1B8D8"
                android:hint="@string/logFechaTajetaDeCaducidad"
                android:inputType="text"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/logCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="#F1B8D8"
                android:hint="@string/logCvv"
                android:inputType="text"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/logBtnRestrarTajerta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logBtnRegistrarTarjeta"
            android:layout_margin="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>