<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-66dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:background="#DF3386"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="-15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_marginVertical="30dp"
                android:src="@drawable/logo" />
        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:src="@drawable/login" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:background="#DF3386"
                android:hint="@string/logTxtCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:text="julieta@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/logTxtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"

                android:background="#DF3386"
                android:hint="@string/logTxtClave"
                android:inputType="textPassword"
                android:maxLength="100"
                android:text="12345678" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/LogBtnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Iniciar Sesión"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/logBtnSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/logBtnSalir"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/logLblRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:alpha="0.5"
            android:text="@string/logLblRegistro"
            android:textColor="#0000AF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>