<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0sp"
        android:layout_height="122dp"
        android:background="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="348dp"
        android:layout_height="451dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginBottom="10sp"
                android:height="60sp"
                android:ems="10"
                android:hint="@string/logTxtNombre"
                android:inputType="text"
                android:labelFor="@id/txtApellido"
                android:text="alex" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apellido" />

            <EditText
                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginBottom="10sp"
                android:height="60sp"
                android:ems="10"
                android:hint="@string/logTxtApellido"
                android:inputType="text"
                android:text="santiago" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Celular" />

            <EditText
                android:id="@+id/txtCelular"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginBottom="10sp"
                android:height="60sp"
                android:ems="10"
                android:hint="Numero de Telefono"
                android:inputType="phone"
                android:maxLength="9"
                android:text="904484899" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Correo" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:height="60sp"
                android:ems="10"
                android:hint="@string/logTxtCorreo"
                android:inputType="textEmailAddress"
                android:text="alex@gmail.com" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contraseña" />

            <EditText
                android:id="@+id/txtClave"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginBottom="10sp"
                android:height="60sp"
                android:ems="10"
                android:hint="@string/logTxtClave"
                android:inputType="textPassword"
                android:text="123" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirmar contraseña" />

            <EditText
                android:id="@+id/txtConfirmarClave"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginBottom="10sp"
                android:height="60sp"
                android:ems="10"
                android:hint="@string/logTxtClave"
                android:inputType="textPassword"
                android:text="123" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:onClick="registrar"
        android:text="@string/logLblRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.775" />

    <Button
        android:id="@+id/LogBtnRetroceder"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:onClick="retroceder"
        android:text="retroceder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.775" />
</androidx.constraintlayout.widget.ConstraintLayout>