<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfilActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-66dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:background="#DF3386"
            android:orientation="vertical"

            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="-15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_marginVertical="30dp"
                android:src="@drawable/logo" />
        </LinearLayout>


        <EditText
            android:id="@+id/logTxtApellido"
            android:layout_width="369dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="#DF3386"
            android:hint="Apellidos"
            android:inputType="text"
            android:padding="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="#DF3386"
                android:hint="@string/logTxtNombre"
                android:inputType="textEmailAddress"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="#DF3386"
                android:hint="@string/logTxtCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="#DF3386"
                android:hint="@string/logTxtTelefono"
                android:inputType="phone"
                android:maxLength="9" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="#DF3386"
                android:hint="@string/logTxtClave"
                android:inputType="textPassword"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="confirmar"
                android:text="Confirmar"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:onClick="irEditarPerfil"
                android:text="Cancelar"
                android:textAllCaps="false" />
        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>